@@ -21,7 +21,7 @@
             <div class="flex-row" style="column-gap: 16px; align-items: center;">
                 <h1>Characters</h1>
                 <a href="characters_edit.html">
-                    <button>Edit</button>
+                    <button class="edit">Edit</button>
                 </a>
             </div>
             <div class="flex-row sort-filter-bar">
