@@ -18,8 +18,13 @@
         
         <main>
             <h1>Edit Characters</h1>
+            <p style="margin: 0px; color: white;">Set starting values for Arcanists</p>
             <input class="search-bar" placeholder="Search">
             <div class="character-cards">
+                <div class="card">
+                    <img class="character-img" src="images/characters/icon/37_Icon.png">
+                    <div>37</div>
+                </div>
                 <div class="card">
                     <img class="character-img" src="images/characters/icon/A_Knight_Icon.png">
                     <div>A Knight</div>
