@@ -25,7 +25,7 @@
                     </button>
                 </a>
             </header>
-            <div class="hehe" style="color: white; display: none;">I added multiple profiles check it out in settings :)</div>
+            <div class="hehe" style="color: white; display: none; background-color: darkcyan; max-width: fit-content; padding: 16px; border-radius: 10px; margin-bottom: 16px;">You can now manually edit your character counts :) check it out in the characters page</div>
             <div class="flex">
                 <div class="banner-wrapper">
                     <div class="banner">
